[gd_scene load_steps=3 format=3 uid="uid://v4n4vqnyjqjv"]

[ext_resource type="Script" path="res://Scripts/StartScreen.gd" id="1_6fcfo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pranp"]
bg_color = Color(1, 1, 1, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fcfo")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.907942, 0.907942, 0.907942, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Setup" type="Panel" parent="."]
layout_mode = 0
offset_left = 652.0
offset_top = 161.0
offset_right = 1235.0
offset_bottom = 875.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pranp")

[node name="VBoxContainer" type="VBoxContainer" parent="Setup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.5
offset_top = -176.0
offset_right = 195.335
offset_bottom = 143.325
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Company" type="Label" parent="Setup/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Company Name:"

[node name="CompanyName" type="LineEdit" parent="Setup/VBoxContainer"]
layout_mode = 2

[node name="BusinessType" type="Label" parent="Setup/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Business Type:"

[node name="BusinessSelect" type="OptionButton" parent="Setup/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Setup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Start"

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 763.0
offset_top = 707.0
offset_right = 1109.0
offset_bottom = 730.0
theme_override_colors/font_color = Color(0.478431, 0, 0, 1)
